--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "danisман-sigorta",
+  "name": "danisman-sigorta",
   "private": true,
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
